--- a/style2.css
+++ b/style2.css
@@ -81,6 +81,7 @@
     padding: 0px 15px;
     text-align: center;
     font-family: 'Baloo Chettan 2', cursive;
+    box-shadow: 3px 3px 10px 2px orangered, -3px -3px 10px 2px yellowgreen;
 }
 .home p
 {
@@ -116,6 +117,10 @@
     height: 420px;
     border-radius: 43px;
     background-color: antiquewhite;
+}
+.cater p
+{
+    font-weight: bold;
 }
 .catalog img
 {
@@ -484,7 +489,7 @@ footer
     }
     .home
     {
-        margin: 3vw 0px;
+        margin: 2vw 0px;
     }
     #Home::before
     {
